# kafkAI

./: .gitignore  README.md  config.toml  create_training_set.ipynb  main.py  playground.ipynb  pyproject.toml  requirements.txt  tasks.py
outputs/: mbp_llama3:70b_2024-06-03T16:00:31.286634227Z.txt  mbp_llama3_2024-06-01T14:52:42.90117798Z.txt  mbp_mixtral:8x22b_2024-06-05T23:56:28.365711215Z.txt  mbp_qwen:110b_2024-06-06T01:03:27.636027737Z.txt  scsp_llama3:70b_2024-06-03T16:15:55.18050988Z.txt  scsp_llama3_2024-06-02T10:33:12.945919354Z.txt  scsp_mixtral:8x22b_2024-06-05T21:16:39.245968034Z.txt  scsp_qwen:110b_2024-06-05T15:27:42.291981044Z.txt  scsp_qwen:110b_2024-06-06T00:32:43.964879851Z.txt
prompts/: prompts.py
scripts/: generate_ollama.py
tests/: test_save_to_file.py
utils/: constants.py  logger.py  maintenance.py  save_to_file.py
