[tool.poetry]
name = "kafkai"
version = "0.1.0"
description = ""
authors = ["Wiktor Morawski <wrmorawski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
ipykernel = "^6.29.4"
transformers = "^4.40.0"
accelerate = "^0.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
